--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -14,7 +14,7 @@
                         <li>$ {{ listing.bid }}</li>
                         <li>Category: {{ listing.category }}</li>
                         {% if listing.image %}
-                            <img src="{{ listing.image.url }}" style="height: 250px; width: auto;"/>
+                            <img src="{{ listing.image }}" style="height: 250px; width: auto;"/>
                         {% endif %}
                     </ul>
                 </li>
