--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -2,47 +2,62 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{% block title %}Auctions{% endblock %}</title>
-        <link href="{% static 'style.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <h1>Auctions</h1>
-        <div>
+<head>
+    <title>{% block title %}Auctions{% endblock %}</title>
+    <link href="{% static 'style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+<body>
+    <header>
+        <h1 class="header-logo">Auctions</h1>
+        <div class="user-status">
             {% if user.is_authenticated %}
                 Signed in as <strong>{{ user.username }}</strong>.
             {% else %}
                 Not signed in.
             {% endif %}
         </div>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">All Listings</a>
+    </header>
+
+    <nav>
+        <ul class="nav-list">
+            <li class="nav-list-item">
+                <a href="{% url 'index' %}">All Listings</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+            <li class="nav-list-item">
+                <a href="{% url 'categories' %}">Categories</a>
             </li>
             {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                <li class="nav-list-item">
+                    <a href="{% url 'logout' %}">Log Out</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create' %}">Create Listing</a>
+                <li class="nav-list-item">
+                    <a href="{% url 'create' %}">Create Listing</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
+                <li class="nav-list-item">
+                    <a href="{% url 'watchlist' %}">Watchlist</a>
+                </li>
             {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                <li class="nav-list-item">
+                    <a href="{% url 'login' %}">Log In</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                <li class="nav-list-item">
+                    <a href="{% url 'register' %}">Register</a>
                 </li>
             {% endif %}
         </ul>
-        <hr>
-        {% block body %}
-        {% endblock %}
-    </body>
+    </nav>
+
+    <main>
+        <div class="container">
+            <hr>
+            {% block body %}
+            {% endblock %}
+        </div>
+    </main>
+
+    <footer>
+        &copy; 2023 Auctions. All rights reserved.
+    </footer>
+</body>
 </html>
