--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -2,13 +2,13 @@
 {% block title %}Register{% endblock %}
 {% block body %}
 
-    <h2>Register</h2>
+    <h2 class="heading">Register</h2>
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
+    <form action="{% url 'register' %}" method="post" class="form-container">
         {% csrf_token %}
         <div class="form-group">
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
@@ -22,9 +22,9 @@
         <div class="form-group">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Register">
+        <input class="form-btn" type="submit" value="Register">
     </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    <p class="login-link">Already have an account? <a href="{% url 'login' %}">Log In here.</a></p>
 
 {% endblock %}
