--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -3,13 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{% block title %}Auctions{% endblock %}</title>
+    <title>{% block title %}AuctionIt{% endblock %}</title>
     <link href="{% static 'style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <h1 class="header-logo">Auctions</h1>
+        <h1 class="header-logo">AuctionIt</h1>
         <div class="user-status">
             {% if user.is_authenticated %}
                 Signed in as <strong>{{ user.username }}</strong>.
